# abstracto

./: Cargo.toml  README.md
examples/: cells.rs  cos_sin.rs  demo.rs  demo1.rs  demo2.rs  demo3.rs  demo4.rs  demo5.rs  distortion.rs  extra.rs  grid_pattern.rs  mandelbrot_set.rs  pastel.rs  squircle.rs
palettes/: pastels.ppm  random.ppm
src/: lib.rs
