[package]
name = "abstracto"
version = "0.1.0"
edition = "2018"
authors = ["Alexey Golubev <dr.freecx@gmail.com>"]

[[example]]
name = "cos_sin"

[[example]]
name = "pastel"

[[example]]
name = "distortion"

[[example]]
name = "cells"

[[example]]
name = "grid_pattern"

[[example]]
name = "mandelbrot_set"

[[example]]
name = "squircle"
